# Aurum

./: .gitignore  Dockerfile  Dockerfile-db  docker-compose.yaml  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py
test/: test_lookup_endpoint.py
tools_server/: tools.py
