[project]
name = "aurum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "fastapi>=0.115.11",
    "geoalchemy2>=0.17.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "psycopg2-binary>=2.9.10",
    "pyproj>=3.7.1",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
